# rust_expense_tracker

./: 1.json  10.json  3.json  348.json  Cargo.toml  README.md  docker-compose.yml
src/: filesystem.rs  lib.rs  main.rs  user.rs
src/api/expenses/: handlers.rs  mod.rs
src/api/expenses/functions/: add_balance.rs  add_expense.rs  delete_expense.rs  mod.rs  update_expense.rs
src/api/users/: handlers.rs  mod.rs
src/database/: connection.rs  createTable.sql
src/routes/: expense.rs  mod.rs
tests/: api_test.rs  integration_test.rs
