[package]
name = "rust_expense_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
axum = "0.6.19"
reqwest = "0.11.18"
# tower-http = { version = "0.4", features = ["full"] }
